[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/pixel_font_7.ttf" type="FontFile" id=1]
[ext_resource path="res://src/menus/options/Options.gd" type="Script" id=2]
[ext_resource path="res://src/utils/background/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/buttons/buttons_square/11_right_arrow.png" type="Texture2D" id=4]
[ext_resource path="res://assets/ui/buttons/buttons_square/11_right_arrow_pick.png" type="Texture2D" id=5]
[ext_resource path="res://assets/ui/decors/Decor_Title_options2.png" type="Texture2D" id=6]
[ext_resource path="res://assets/ui/buttons/buttons_rect/1_orange_button_pick.png" type="Texture2D" id=7]
[ext_resource path="res://assets/ui/buttons/buttons_rect/1_orange_button.png" type="Texture2D" id=8]
[ext_resource path="res://assets/ui/bars/bars_center/Main_menu_bar.png" type="Texture2D" id=9]
[ext_resource path="res://assets/ui/buttons/buttons_rect/1_violet_button_pick.png" type="Texture2D" id=10]
[ext_resource path="res://assets/ui/buttons/buttons_rect/1_violet_button.png" type="Texture2D" id=11]

[sub_resource type="FontFile" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="FontFile" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Options" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="Control" type="Control" parent="."]
offset_right = 576.0
offset_bottom = 1024.0

[node name="OptionsHeading" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = 112.0
offset_bottom = 128.0
texture = ExtResource( 6 )
expand = true
flip_h = true

[node name="Label" type="Label" parent="Control/OptionsHeading"]
anchor_left = 1.0
anchor_right = 1.0
offset_left = -256.0
offset_top = -48.0
offset_bottom = 16.0
custom_fonts/font = SubResource( 1 )
text = "Options"
align = 1
valign = 1

[node name="OptionsBar" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_right = 256.0
offset_bottom = 480.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 1

[node name="SettingsButton" type="TextureButton" parent="Control/OptionsBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -200.0
offset_right = 160.0
offset_bottom = -136.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Control/OptionsBar/SettingsButton"]
offset_right = 320.0
offset_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Settings"
align = 1
valign = 1

[node name="ExtrasButton" type="TextureButton" parent="Control/OptionsBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = -56.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Control/OptionsBar/ExtrasButton"]
offset_right = 320.0
offset_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Extras"
align = 1
valign = 1

[node name="CreditsButton" type="TextureButton" parent="Control/OptionsBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -40.0
offset_right = 160.0
offset_bottom = 24.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Label" type="Label" parent="Control/OptionsBar/CreditsButton"]
offset_right = 320.0
offset_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Credits"
align = 1
valign = 1

[node name="DeleteSavegameButton" type="TextureButton" parent="Control/OptionsBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 144.0
offset_right = 160.0
offset_bottom = 208.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="Control/OptionsBar/DeleteSavegameButton"]
offset_right = 320.0
offset_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Delete Savegame"
align = 1
valign = 1

[node name="BackButton" type="TextureButton" parent="Control"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
offset_right = -64.0
offset_bottom = -64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[connection signal="pressed" from="Control/OptionsBar/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Control/OptionsBar/ExtrasButton" to="." method="_on_ExtrasButton_pressed"]
[connection signal="pressed" from="Control/OptionsBar/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Control/OptionsBar/DeleteSavegameButton" to="." method="_on_DeleteSavegameButton_pressed"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_BackButton_pressed"]
